CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(testpaper)


FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)


IF(OPENMP_FOUND)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF()

INCLUDE(${VTK_USE_FILE})

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}

)

FILE(GLOB SRC "./*.h" "./*.cpp" "./*.cxx")	 
FILE(COPY "comb.vtk" DESTINATION ${PROJECT_BINARY_DIR}) 

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC}
) 
TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
    ${VTK_LIBRARIES}
	${OPENGL_LIBRARY}
)